--- a/hm_modules/.config/zsh/zeno/config.yml
+++ b/hm_modules/.config/zsh/zeno/config.yml
@@ -7,6 +7,10 @@ snippets:
     keyword: lsn
     snippet: eza -gT $(nix build nixpkgs#{{package_name}} --no-link --print-out-paths)
 
+  - name: Switch environment
+    keyword: hmsf
+    snippet: home-manager switch{{}} --flake ~/.dotfiles_deb/#sumizomenosakura
+
   - name: git commit message
     keyword: gcm
     snippet: git commit -m '{{commit_message}}'
